--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
             </div>
             <div class="first-input">
               <div class="input-wrapper">
-                <label for="interest-select">What are you Interest in</label>
+                <label for="interest-select">What are you Interested in</label>
                 <select id="interest-select" name="reason-for-contact">
                   <option value="">--Please choose an option--</option>
                   <option value="work">Collaboration</option>
@@ -643,10 +643,10 @@
                 </select>
               </div>
               <div class="input-wrapper">
-                <label for="date">Phone Number</label>
+                <label for="phonenumber">Phone Number</label>
                 <input
                   type="text"
-                  id="phone number"
+                  id="phonenumber"
                   name="phone number"
                   placeholder="+1 (614) 999 000 "
                 />
