--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
               </p>
             </div>
             <div class="btns">
-              <a class="button see-my-work" href="#portfolio">See my Work</a>
-              <a class="button" href="#contact">Work with me</a>
+              <a class="button see-my-work" href="#portfolio"> See My Work</a>
+              <a class="button" href="#contact">Hire Me</a>
             </div>
           </div>
           <div class="image-hero">
