--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="icon" type="img/x-icon" href="/favicon.ico?" />
+    <link rel="icon" type="img/x-icon" href="./favicon.ico" />
     <link rel="stylesheet" href="css/styles.css" />
     <script src="scripts/index.js" defer></script>
   </head>
