--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
           <h1 class="contact-title">Love to hear from you, Get in Touch 👋🏼</h1>
 
           <form
-            action="https://formsubmit.co/abdullahijamalm@email.com"
+            action="https://formsubmit.co/abdullahijamalm@gmail.com"
             method="POST"
             id="contact-form"
           >
