--- a/index.html
+++ b/index.html
@@ -607,10 +607,15 @@
           <h1 class="contact-title">Love to hear from you, Get in Touch 👋🏼</h1>
 
           <form
-            action="https://formsubmit.co/abdullahijamalm@gmail.com"
+            action="https://formsubmit.co/4ff1c76dd061c544307ba8ada1a87560"
             method="POST"
             id="contact-form"
           >
+            <!-- HoneyPot -->
+            <input type="text" name="_honey" style="display: none" />
+
+            <!-- Disable captcha -->
+            <input type="hidden" name="_captcha" value="false" />
             <div class="first-input">
               <div class="input-wrapper">
                 <label for="name">Name</label>
