--- a/index.html
+++ b/index.html
@@ -616,6 +616,13 @@
 
             <!-- Disable captcha -->
             <input type="hidden" name="_captcha" value="false" />
+
+            <!-- success page  -->
+            <input
+              type="hidden"
+              name="_next"
+              value="https://abdullahi-j.github.io/Portfolio-website/pages/success.html"
+            />
             <div class="first-input">
               <div class="input-wrapper">
                 <label for="name">Name</label>
