--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JAMAL's portfolio</title>
+    <title>JAMAL's Portfolio</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -629,6 +629,7 @@
                 <input
                   id="name"
                   type="text"
+                  required
                   name="name"
                   placeholder="Enter Your name"
                   autocomplete="off"
@@ -640,6 +641,7 @@
                   type="text"
                   name="email"
                   id="email"
+                  required
                   placeholder="Enter Your email"
                   autocomplete="off"
                 />
@@ -662,6 +664,7 @@
                   id="phonenumber"
                   name="phone number"
                   placeholder="+1 (614) 999 000 "
+                  required
                 />
               </div>
             </div>
@@ -673,6 +676,7 @@
                 id="message"
                 cols="30"
                 rows="10"
+                required
                 name="comments"
                 placeholder="Enter your message here"
               ></textarea>
