--- a/pages/success.html
+++ b/pages/success.html
@@ -3,14 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jamal's Page</title>
+    <title>JAMAL's Portfolio</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <script src="../scripts/index.js" defer></script>
   </head>
   <body>
     <div class="container">
-      <h1>Contact Me</h1>
-      <p>Successfully sent!. We will get back to you soon.</p>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="36"
+        height="36"
+        viewBox="0 0 36 36"
+      >
+        <path
+          fill="green"
+          d="M18 2a16 16 0 1 0 16 16A16 16 0 0 0 18 2Zm10.45 10.63L15.31 25.76L7.55 18a1.4 1.4 0 0 1 2-2l5.78 5.78l11.14-11.13a1.4 1.4 0 1 1 2 2Z"
+          class="clr-i-solid clr-i-solid-path-1"
+        />
+        <path fill="none" d="M0 0h36v36H0z" />
+      </svg>
+
+      <h1>Success!</h1>
+      <p>Successfully sent. We will get back to you soon.</p>
+      <a href="https://abdullahi-j.github.io/Portfolio-website/">Return Home</a>
     </div>
   </body>
 </html>
