--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
             </p>
 
             <div class="about-me-buttons">
-              <a class="button" href="#resume">Resume</a>
+              <a
+                href="./resume/JAMAL MOHAMED.pdf"
+                class="button"
+                href="#resume"
+                download="Jamal Mohamed Resume"
+                >Resume</a
+              >
               <a class="button" href="#portfolio">My Work</a>
               <a class="button" href="#contact">Contact</a>
             </div>
@@ -621,7 +627,7 @@
             <input
               type="hidden"
               name="_next"
-              value="https://abdullahi-j.github.io/Portfolio-website/pages/success.html"
+              value="https://jamaldeveloper.com/pages/success.html"
             />
             <div class="first-input">
               <div class="input-wrapper">
@@ -650,8 +656,8 @@
             <div class="first-input">
               <div class="input-wrapper">
                 <label for="interest-select">What are you Interested in</label>
-                <select id="interest-select" name="reason-for-contact">
-                  <option value="">--Please choose an option--</option>
+                <select id="interest-select" name="reason-for-contact" required>
+                  <option value="">Choose an option</option>
                   <option value="work">Collaboration</option>
                   <option value="hire">Hire me</option>
                   <option value="mentorship">Mentorship</option>
@@ -748,6 +754,7 @@
               <ul>
                 <li>App development</li>
                 <li>Web development</li>
+                <li>Data Analytics</li>
               </ul>
             </div>
             <div class="useful-links">
@@ -755,6 +762,14 @@
               <ul>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact Me</a></li>
+                <li>
+                  <a
+                    href="./resume/ABDULLAHI MOHAMED.pdf"
+                    href="#resume"
+                    download="Jamal Mohamed Resume"
+                    >Resume</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
