--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
               <p class="hero-title">HELLO MY NAME IS JAMAL,</p>
               <h1 class="hero-primary">A Software Engineer</h1>
               <p>
-                I work with bussinesses and startups to build interactive web
-                user interfaces and mobile apps with focuses on responsiveness,
-                accessibilty, design, compatiblity and performances using
+                I work with business and startups to build interactive web user
+                interfaces and mobile apps with focuses on responsiveness,
+                accessibility, design, compatiblity and performances using
                 cutting-edge technology.
               </p>
             </div>
@@ -96,8 +96,8 @@
               bachelor's degree in Computer Science. I craft user interfaces
               using modern frontend web technologies. Besides building user
               interfaces (Websites) and mobile Apps, I love making innovation in
-              every project i work on. I currently work at Cambium assessesment,
-              the leading provider of online assessesment for students across
+              every project i work on. I currently work at Cambium assessment,
+              the leading provider of online assessment for students across
               America as a Quality analyst keeping bugs at bay and ensuring that
               both the tests and reports are clear from any errors.
             </p>
@@ -153,7 +153,7 @@
               <p>
                 I use java for building RESTful API's using springboot. I also
                 use it to coding algorithms and data structure. As a mobile
-                developer i use java to build mobile applications for android
+                developer I use java to build mobile applications for android
                 devices.
               </p>
             </div>
@@ -254,7 +254,7 @@
               <h3>Front End Development</h3>
               <p>
                 I create user interfaces and implement the visual and
-                interactive elements of a website. The tools i use range from
+                interactive elements of a website. The tools I use range from
                 HTML, CSS, Javascript, Bootstrap, Angular and React.
               </p>
             </div>
@@ -286,7 +286,7 @@
               <p>
                 Android development involves writing code in java or kotlin,
                 designing user interfaces and integrating various
-                functionalities into the app. Android studio is the IDE i use to
+                functionalities into the app. Android studio is the IDE I use to
                 build mobile applications.
               </p>
             </div>
@@ -365,7 +365,7 @@
               <h3>Testing and Debugging</h3>
               <p>
                 Testing and debugging are crucial aspects of Software
-                development. As a software engineer i help identify and resolve
+                development. As a software engineer I help identify and resolve
                 errors and ensure the reliability and quality of the system, and
                 improve overall performance.
               </p>
@@ -384,7 +384,7 @@
               </svg>
               <h3>Soft Skills</h3>
               In Addition to technical expertise, soft skills are also essential
-              for success in any profession. As a software engineer i possess
+              for success in any profession. As a software engineer I possess
               this skills. Communication, Collaboration, Problem solving,
               Adaptabilty and Attention to detail.
             </div>
