Added a new project and added a new youtube link social

--- a/index.html
+++ b/index.html
@@ -469,6 +469,77 @@
             <article class="card-portfolio">
               <div>
                 <img
+                  src="https://user-images.githubusercontent.com/92641182/261189908-4add06ec-3f34-4795-94fd-f49b002d5a94.png"
+                  alt=""
+                />
+              </div>
+              <div class="portfolio-body">
+                <h4>Pricing Component</h4>
+                <p>
+                  A responsive pricing component with toggle. Made with HTML CSS
+                  and Js.
+                </p>
+              </div>
+              <div class="projects-button">
+                <a
+                  href="https://abdullahi-j.github.io/Pricing-component-with-toggle/"
+                  target="_blank"
+                >
+                  Live website
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="1.5"
+                      d="M6 19L19 6m0 0v12.48M19 6H6.52"
+                    />
+                  </svg>
+                </a>
+
+                <a
+                  href="https://github.com/ABDULLAHI-J/Pricing-component-with-toggle/tree/main"
+                  target="_blank"
+                >
+                  Source Code
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="32"
+                    height="32"
+                    viewBox="0 0 72 72"
+                  >
+                    <path
+                      fill="#d0cfce"
+                      d="M29.044 61.611c0-.927-.035-3.98-.035-7.764c0-2.647.874-4.373 1.863-5.253c-6.227-.721-12.779-3.153-12.779-14.034c0-3.098 1.096-5.632 2.887-7.615c-.286-.72-1.253-3.606.278-7.514c0 0 2.355-.764 7.716 2.908a26.455 26.455 0 0 1 14.054 0c5.357-3.672 7.711-2.908 7.711-2.908c1.532 3.908.57 6.795.278 7.514c1.796 1.983 2.882 4.514 2.882 7.615c0 10.905-6.56 13.307-12.817 14.008c1.013.882 1.909 2.611 1.909 5.263c0 3.792-.035 6.85-.035 7.78c0 .762.505 1.641 1.93 1.369c11.145-3.758 19.177-14.396 19.177-26.932c0-15.678-12.567-28.388-28.067-28.388c-15.494 0-28.06 12.707-28.06 28.388c0 12.541 8.04 23.182 19.202 26.934c1.395.262 1.906-.614 1.906-1.37z"
+                    />
+                    <g
+                      fill="none"
+                      stroke="#000"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-miterlimit="10"
+                      stroke-width="2"
+                    >
+                      <path
+                        d="M29.044 61.611c0-.927-.035-3.98-.035-7.764c0-2.647.874-4.373 1.863-5.253c-6.227-.721-12.779-3.153-12.779-14.034c0-3.098 1.096-5.632 2.887-7.615c-.286-.72-1.253-3.606.278-7.514c0 0 2.355-.764 7.716 2.908a26.455 26.455 0 0 1 14.054 0c5.357-3.672 7.711-2.908 7.711-2.908c1.532 3.908.57 6.795.278 7.514c1.796 1.983 2.882 4.514 2.882 7.615c0 10.905-6.56 13.307-12.817 14.008c1.013.882 1.909 2.611 1.909 5.263c0 3.792-.035 6.85-.035 7.78c0 .762.505 1.641 1.93 1.369c11.145-3.758 19.177-14.396 19.177-26.932c0-15.678-12.567-28.388-28.067-28.388c-15.494 0-28.06 12.707-28.06 28.388c0 12.541 8.04 23.182 19.202 26.934c1.395.262 1.906-.614 1.906-1.37z"
+                      />
+                      <path
+                        d="M16.29 48.09c2.568.78 3.58 1.635 4.789 3.661c1.205 2.026 2.62 4.287 7.933 2.999"
+                      />
+                    </g>
+                  </svg>
+                </a>
+              </div>
+            </article>
+            <article class="card-portfolio">
+              <div>
+                <img
                   src="https://raw.githubusercontent.com/ABDULLAHI-J/Clipboard-landing-page/main/design/desktop-preview.jpg"
                   alt=""
                 />
@@ -745,6 +816,26 @@
                     </g>
                   </svg>
                   Github
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/channel/UC0Yy27wNUcN-y8O5R7bzNxQ"
+                  target="_blank"
+                  title="Youtube"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="32"
+                    height="32"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      fill="red"
+                      d="m10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73Z"
+                    />
+                  </svg>
+                  Youtube
                 </a>
               </li>
             </ul>
